update asset manipulation blocks

--- a/notebooks/rws-bathymetry/bathymetry_subtidal.ipynb
+++ b/notebooks/rws-bathymetry/bathymetry_subtidal.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
       "text/html": [
        "<p>To authorize access needed by Earth Engine, open the following\n",
        "        URL in a web browser and follow the instructions:</p>\n",
-       "        <p><a href=https://accounts.google.com/o/oauth2/auth?client_id=517222506229-vsmmajv00ul0bs7p89v5m89qs8eb9359.apps.googleusercontent.com&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fearthengine+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdevstorage.full_control&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&response_type=code&code_challenge=F03GF14s6KI08_8NiL18ztG7ozavIgJDu0alRtnJJnU&code_challenge_method=S256>https://accounts.google.com/o/oauth2/auth?client_id=517222506229-vsmmajv00ul0bs7p89v5m89qs8eb9359.apps.googleusercontent.com&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fearthengine+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdevstorage.full_control&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&response_type=code&code_challenge=F03GF14s6KI08_8NiL18ztG7ozavIgJDu0alRtnJJnU&code_challenge_method=S256</a></p>\n",
+       "        <p><a href=https://accounts.google.com/o/oauth2/auth?client_id=517222506229-vsmmajv00ul0bs7p89v5m89qs8eb9359.apps.googleusercontent.com&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fearthengine+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdevstorage.full_control&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&response_type=code&code_challenge=YG_x9enEn9-a1zcTbPOmXnuiL6F88t58zWtKeNDCpFI&code_challenge_method=S256>https://accounts.google.com/o/oauth2/auth?client_id=517222506229-vsmmajv00ul0bs7p89v5m89qs8eb9359.apps.googleusercontent.com&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fearthengine+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdevstorage.full_control&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&response_type=code&code_challenge=YG_x9enEn9-a1zcTbPOmXnuiL6F88t58zWtKeNDCpFI&code_challenge_method=S256</a></p>\n",
        "        <p>The authorization workflow will generate a code, which you\n",
        "        should paste in the box below</p>\n",
        "        "
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter verification code: 4/1AX4XfWiYjfIJHyuIwKPaXUlJiAVni2djX6SanN70SMIkTQUID1A0shzb8ag\n",
+      "Enter verification code: 4/1AX4XfWgbdu16sZJ_R3V6TLD6Q6SAssRjgUoxOtbjZiZKTB6uTyVLBKhhRDQ\n",
       "\n",
       "Successfully saved authorization token.\n"
      ]
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f1923c4e6ea4d16b66e5d5da1aa9e7d",
+       "model_id": "aec754858f544ad19d266992404509dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,31 +121,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cartesian_product(l1: ee.List, l2: ee.List) -> ee.List:\n",
-    "    return l1.map(lambda e1: l2.map(lambda e2: ee.List([e1, e2])).flatten())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Asset users/jaapel/tests already exists.\n"
+     ]
+    }
+   ],
    "source": [
     "user_name = ee.data.getAssetRoots()[0][\"id\"].split(\"/\")[-1]\n",
     "asset_id = f\"users/{user_name}/tests/test_inverse_depth\"\n",
     "asset_dict = ee.data.listAssets({\"parent\": f\"projects/earthengine-legacy/assets/users/{user_name}/tests\"})\n",
-    "if \"tests\" in asset_dict[\"assets\"]:\n",
+    "if any([asset[\"id\"] == asset_id for asset in asset_dict[\"assets\"]]):\n",
     "    ee.data.deleteAsset(asset_id)\n",
     "ee.data.create_assets(asset_ids=[\"/\".join(asset_id.split(\"/\")[:-1])], asset_type=\"Folder\", mk_parents=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,9 +180,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'state': 'READY', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870448110, 'start_timestamp_ms': 0, 'task_type': 'EXPORT_IMAGE', 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870473521, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870473521, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870473521, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870473521, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870473521, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870613855, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870613855, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870667021, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870667021, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870726892, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870726892, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870786888, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870786888, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870846891, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870846891, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870906890, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870906890, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870966899, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638870966899, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638871026893, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638871026893, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638871086887, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638871086887, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638871146888, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638871146888, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638871206898, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'RUNNING', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638871206898, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n",
+      "{'state': 'COMPLETED', 'description': 'test_compute_inverse_depth', 'creation_timestamp_ms': 1638870448110, 'update_timestamp_ms': 1638871273303, 'start_timestamp_ms': 1638870473382, 'task_type': 'EXPORT_IMAGE', 'destination_uris': ['https://code.earthengine.google.com/?asset=projects/earthengine-legacy/assets/users/jaapel/tests/test_inverse_depth'], 'attempt': 1, 'id': 'GBMMBRZTZW4LUBJQWMDFU54C', 'name': 'projects/earthengine-legacy/operations/GBMMBRZTZW4LUBJQWMDFU54C'}\n"
+     ]
+    }
+   ],
    "source": [
     "task_status = task.status()\n",
     "while task_status['state'] in ['READY', 'RUNNING']:\n",
@@ -197,9 +237,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aec754858f544ad19d266992404509dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(bottom=171160.0, center=[52.97, 4.74], controls=(WidgetControl(options=['position', 'transparent_bg'], wid…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "image_subtidal = ee.Image(asset_id)\n",
     "Map.addLayer(image_subtidal, {\"gamma\": 1.2}, 'RGB_raw', True)\n",
