Solved API access
Still to fix single image export from API though

--- a/notebooks/rws-bathymetry/CIP_RWS_SDB_USE_CASE_WS.ipynb
+++ b/notebooks/rws-bathymetry/CIP_RWS_SDB_USE_CASE_WS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,14 @@
     "import geojson\n",
     "import datetime\n",
     "import time\n",
+    "import rasterio\n",
     "\n",
     "from tqdm.notebook import tqdm_notebook\n",
     "from dateutil.relativedelta import relativedelta\n",
     "from geojson import Feature, FeatureCollection, dump\n",
     "from shapely.geometry import Polygon, LineString, MultiLineString, Point\n",
     "from scipy import stats, interpolate\n",
+    "from google.cloud import storage\n",
     "\n",
     "# coordinate conversions\n",
     "SR4326 = osr.SpatialReference()\n",
@@ -49,16 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# see scheme at acces_api.pdf for a workflow visualization\n",
+    "\n",
     "# project toggles\n",
-    "file_fol = r'p:\\satellite-derived-bathymetry\\data' # input folder for the output data\n",
-    "xtile = 'x264' # fill in when toggled spatial\n",
-    "ytile = 'y165' # fill in when toggled spatial \n",
+    "file_fol = r'p:\\satellite-derived-bathymetry' # name of the local folder for the input data\n",
+    "bucket = 'jip_calm_sdb' # name of the Google Cloud Storage bucket to store files in the cloud\n",
+    "credential_file = r'p:\\11204209-jip-calm\\WT4.1_SDB\\GEE_images\\jip-calm-c1886b3313b9.json' # Cloud Storage credential key\n",
+    "overall_project = 'RWS_SDB' # name of the overall project\n",
+    "project_name = 'Friese_Zeegat' # name of the project AoI\n",
     "draw_tr = 0 # toggle 1 to draw transect(s), 0 to load\n",
-    "project_name = 'Friese_Zeegat' #\n",
+    "\n",
+    "# composite image toggles \n",
     "scale = 19.109  # output resolution of the image [m]"
    ]
   },
@@ -71,31 +78,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 78,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91f4f4ab1b314ddd91c1f8d2baeff0c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# NOTE, see CIP_RWS_SDB_GET_DATA_API.ipynb\n",
+    "# authentication\n",
+    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = credential_file\n",
     "\n",
-    "# to be added:\n",
-    "# get data from cloud storage / imagecollection\n",
-    "# storage.client() blobs"
+    "# get file names\n",
+    "client = storage.Client()\n",
+    "ls = [blob for blob in client.list_blobs(bucket)] \n",
+    "ProcessedList = [str(blob).split(',')[1][1:] for blob in ls if project_name in str(blob).split(',')[1][1:]] \n",
+    "            \n",
+    "# get data from Google Cloud Storage\n",
+    "tiles = []\n",
+    "tile_paths = []\n",
+    "tile_names = []\n",
+    "tile_times = []\n",
+    "for file in tqdm_notebook(ProcessedList):\n",
+    "    with rasterio.Env(GS_ACCESS_KEY_ID=credential_file):\n",
+    "        tiles.append(gdal.Open(r\"https://storage.googleapis.com/{}/{}\".format(bucket, file)))\n",
+    "        tile_paths.append(r\"https://storage.googleapis.com/{}/{}\".format(bucket, file))\n",
+    "        tile_names.append(file.split('/')[-1])\n",
+    "        tile_times.append(file.split('.')[0].split('_')[-2] + ' - ' + file.split('.')[0].split('_')[-1])\n",
+    "        time.sleep(0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f69b3b96a3e41809dac189527a58de6",
+       "model_id": "a358579f107f4768b37dc88b67b162f0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/18 [00:00<?, ?it/s]"
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -108,14 +147,15 @@
     "tile_paths = []\n",
     "tile_names = []\n",
     "tile_times = []\n",
-    "for root, dirs, files in os.walk(file_fol):\n",
-    "    for file in tqdm_notebook(files):\n",
-    "        if file.split('.')[0].split('_')[2] == xtile and file.split('.')[0].split('_')[3] == ytile and 'xml' not in file: \n",
-    "            tiles.append(gdal.Open(os.path.join(file_fol,file)))\n",
-    "            tile_paths.append(os.path.join(file_fol, file))\n",
-    "            tile_names.append(file)\n",
-    "            tile_times.append(file.split('.')[0].split('_')[4] + ' - ' + file.split('.')[0].split('_')[5])\n",
-    "            time.sleep(0.01)"
+    "for root, dirs, files in os.walk(os.path.join(file_fol, overall_project, project_name)):\n",
+    "    if len(files) > 0: # access main folder files\n",
+    "        for file in tqdm_notebook(files):\n",
+    "            if 'xml' not in file: \n",
+    "                tiles.append(gdal.Open(os.path.join(file_fol, overall_project, project_name, file)))\n",
+    "                tile_paths.append(os.path.join(file_fol, overall_project, project_name, file))\n",
+    "                tile_names.append(file)\n",
+    "                tile_times.append(file.split('.')[0].split('_')[-2] + ' - ' + file.split('.')[0].split('_')[-1])\n",
+    "                time.sleep(0.01)"
    ]
   },
   {
