--- a/notebooks/rws-bathymetry/Download_SDB_ImageCollection.ipynb
+++ b/notebooks/rws-bathymetry/Download_SDB_ImageCollection.ipynb
@@ -16,6 +16,46 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "35a8bcdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting retry\n",
+      "  Downloading retry-0.9.2-py2.py3-none-any.whl (8.0 kB)\n",
+      "Collecting pathos\n",
+      "  Downloading pathos-0.2.8-py2.py3-none-any.whl (81 kB)\n",
+      "\u001b[K     |████████████████████████████████| 81 kB 640 kB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: decorator>=3.4.2 in /opt/conda/lib/python3.9/site-packages (from retry) (5.1.0)\n",
+      "Collecting py<2.0.0,>=1.4.26\n",
+      "  Downloading py-1.11.0-py2.py3-none-any.whl (98 kB)\n",
+      "\u001b[K     |████████████████████████████████| 98 kB 641 kB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting dill>=0.3.4\n",
+      "  Downloading dill-0.3.4-py2.py3-none-any.whl (86 kB)\n",
+      "\u001b[K     |████████████████████████████████| 86 kB 881 kB/s eta 0:00:011\n",
+      "\u001b[?25hCollecting pox>=0.3.0\n",
+      "  Downloading pox-0.3.0-py2.py3-none-any.whl (30 kB)\n",
+      "Collecting multiprocess>=0.70.12\n",
+      "  Downloading multiprocess-0.70.12.2-py39-none-any.whl (128 kB)\n",
+      "\u001b[K     |████████████████████████████████| 128 kB 1.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting ppft>=1.6.6.4\n",
+      "  Downloading ppft-1.6.6.4-py3-none-any.whl (65 kB)\n",
+      "\u001b[K     |████████████████████████████████| 65 kB 474 kB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: six>=1.7.3 in /opt/conda/lib/python3.9/site-packages (from ppft>=1.6.6.4->pathos) (1.16.0)\n",
+      "Installing collected packages: dill, py, ppft, pox, multiprocess, retry, pathos\n",
+      "Successfully installed dill-0.3.4 multiprocess-0.70.12.2 pathos-0.2.8 pox-0.3.0 ppft-1.6.6.4 py-1.11.0 retry-0.9.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install retry pathos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "e60bbfec",
    "metadata": {},
    "outputs": [],
@@ -64,7 +104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fe5d66861b14264b9d048a7d5f2e5bd",
+       "model_id": "79b6b675769841de9017858746dd694b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +163,6 @@
       "Help on function download_image_collection in module eepackages.utils:\n",
       "\n",
       "download_image_collection(ic: ee.imagecollection.ImageCollection, name_prefix: str = 'ic_', out_dir: Optional[pathlib.Path] = None, pool_size: int = 25, download_kwargs: Optional[Dict[str, Any]] = None) -> None\n",
-      "    check\n",
       "    Download images in image collection. Only works for images in the collection that are < 32M\n",
       "    and grid dimension < 10000, documented at \n",
       "    https://developers.google.com/earth-engine/apidocs/ee-image-getdownloadurl.\n",
@@ -148,169 +187,15 @@
    "execution_count": 5,
    "id": "37ca5a58",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:pathos:Done: 24\n",
-      "INFO:pathos:Done: 15\n",
-      "INFO:pathos:Done: 2\n",
-      "INFO:pathos:Done: 19\n",
-      "INFO:pathos:Done: 10\n",
-      "INFO:pathos:Done: 11\n",
-      "INFO:pathos:Done: 17\n",
-      "INFO:pathos:Done: 9\n",
-      "INFO:pathos:Done: 12\n",
-      "INFO:pathos:Done: 8\n",
-      "INFO:pathos:Done: 18\n",
-      "INFO:pathos:Done: 22\n",
-      "INFO:pathos:Done: 5\n",
-      "INFO:pathos:Done: 6\n",
-      "INFO:pathos:Done: 7\n",
-      "INFO:pathos:Done: 13\n",
-      "INFO:pathos:Done: 21\n",
-      "INFO:pathos:Done: 20\n",
-      "INFO:pathos:Done: 0\n",
-      "INFO:pathos:Done: 1\n",
-      "INFO:pathos:Done: 14\n",
-      "INFO:pathos:Done: 4\n",
-      "INFO:pathos:Done: 3\n",
-      "INFO:pathos:Done: 16\n",
-      "INFO:pathos:Done: 23\n",
-      "INFO:pathos:Done: 30\n",
-      "INFO:pathos:Done: 31\n",
-      "INFO:pathos:Done: 26\n",
-      "INFO:pathos:Done: 27\n",
-      "INFO:pathos:Done: 35\n",
-      "INFO:pathos:Done: 34\n",
-      "INFO:pathos:Done: 36\n",
-      "INFO:pathos:Done: 33\n",
-      "INFO:pathos:Done: 32\n",
-      "INFO:pathos:Done: 37\n",
-      "INFO:pathos:Done: 39\n",
-      "INFO:pathos:Done: 25\n",
-      "INFO:pathos:Done: 28\n",
-      "INFO:pathos:Done: 43\n",
-      "INFO:pathos:Done: 38\n",
-      "INFO:pathos:Done: 44\n",
-      "INFO:pathos:Done: 29\n",
-      "INFO:pathos:Done: 48\n",
-      "INFO:pathos:Done: 45\n",
-      "INFO:pathos:Done: 49\n",
-      "INFO:pathos:Done: 41\n",
-      "INFO:pathos:Done: 40\n",
-      "INFO:pathos:Done: 46\n",
-      "INFO:pathos:Done: 47\n",
-      "INFO:pathos:Done: 42\n",
-      "INFO:pathos:Done: 61\n",
-      "INFO:pathos:Done: 50\n",
-      "INFO:pathos:Done: 60\n",
-      "INFO:pathos:Done: 51\n",
-      "INFO:pathos:Done: 63\n",
-      "INFO:pathos:Done: 59\n",
-      "INFO:pathos:Done: 52\n",
-      "INFO:pathos:Done: 54\n",
-      "INFO:pathos:Done: 66\n",
-      "INFO:pathos:Done: 58\n",
-      "INFO:pathos:Done: 55\n",
-      "INFO:pathos:Done: 56\n",
-      "INFO:pathos:Done: 65\n",
-      "INFO:pathos:Done: 53\n",
-      "INFO:pathos:Done: 57\n",
-      "INFO:pathos:Done: 64\n",
-      "INFO:pathos:Done: 71\n",
-      "INFO:pathos:Done: 67\n",
-      "INFO:pathos:Done: 62\n",
-      "INFO:pathos:Done: 68\n",
-      "INFO:pathos:Done: 69\n",
-      "INFO:pathos:Done: 74\n",
-      "INFO:pathos:Done: 72\n",
-      "INFO:pathos:Done: 70\n",
-      "INFO:pathos:Done: 73\n",
-      "INFO:pathos:Done: 21\n",
-      "INFO:pathos:Done: 0\n",
-      "INFO:pathos:Done: 16\n",
-      "INFO:pathos:Done: 9\n",
-      "INFO:pathos:Done: 14\n",
-      "INFO:pathos:Done: 17\n",
-      "INFO:pathos:Done: 13\n",
-      "INFO:pathos:Done: 2\n",
-      "INFO:pathos:Done: 4\n",
-      "INFO:pathos:Done: 5\n",
-      "INFO:pathos:Done: 22\n",
-      "INFO:pathos:Done: 1\n",
-      "INFO:pathos:Done: 10\n",
-      "INFO:pathos:Done: 8\n",
-      "INFO:pathos:Done: 12\n",
-      "INFO:pathos:Done: 7\n",
-      "INFO:pathos:Done: 19\n",
-      "INFO:pathos:Done: 3\n",
-      "INFO:pathos:Done: 23\n",
-      "INFO:pathos:Done: 24\n",
-      "INFO:pathos:Done: 18\n",
-      "INFO:pathos:Done: 11\n",
-      "INFO:pathos:Done: 6\n",
-      "INFO:pathos:Done: 20\n",
-      "INFO:pathos:Done: 25\n",
-      "INFO:pathos:Done: 15\n",
-      "INFO:pathos:Done: 28\n",
-      "INFO:pathos:Done: 26\n",
-      "INFO:pathos:Done: 30\n",
-      "INFO:pathos:Done: 33\n",
-      "INFO:pathos:Done: 38\n",
-      "INFO:pathos:Done: 39\n",
-      "INFO:pathos:Done: 42\n",
-      "INFO:pathos:Done: 32\n",
-      "INFO:pathos:Done: 43\n",
-      "INFO:pathos:Done: 47\n",
-      "INFO:pathos:Done: 48\n",
-      "INFO:pathos:Done: 29\n",
-      "INFO:pathos:Done: 36\n",
-      "INFO:pathos:Done: 41\n",
-      "INFO:pathos:Done: 40\n",
-      "INFO:pathos:Done: 37\n",
-      "INFO:pathos:Done: 31\n",
-      "INFO:pathos:Done: 35\n",
-      "INFO:pathos:Done: 34\n",
-      "INFO:pathos:Done: 46\n",
-      "INFO:pathos:Done: 45\n",
-      "INFO:pathos:Done: 49\n",
-      "INFO:pathos:Done: 44\n",
-      "INFO:pathos:Done: 27\n",
-      "INFO:pathos:Done: 52\n",
-      "INFO:pathos:Done: 50\n",
-      "INFO:pathos:Done: 53\n",
-      "INFO:pathos:Done: 54\n",
-      "INFO:pathos:Done: 51\n",
-      "INFO:pathos:Done: 60\n",
-      "INFO:pathos:Done: 61\n",
-      "INFO:pathos:Done: 67\n",
-      "INFO:pathos:Done: 55\n",
-      "INFO:pathos:Done: 62\n",
-      "INFO:pathos:Done: 58\n",
-      "INFO:pathos:Done: 57\n",
-      "INFO:pathos:Done: 65\n",
-      "INFO:pathos:Done: 68\n",
-      "INFO:pathos:Done: 63\n",
-      "INFO:pathos:Done: 66\n",
-      "INFO:pathos:Done: 59\n",
-      "INFO:pathos:Done: 70\n",
-      "INFO:pathos:Done: 56\n",
-      "INFO:pathos:Done: 64\n",
-      "INFO:pathos:Done: 69\n",
-      "INFO:pathos:Done: 73\n",
-      "INFO:pathos:Done: 72\n",
-      "INFO:pathos:Done: 71\n",
-      "INFO:pathos:Done: 74\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Adding logging to see debug logs from the image downloads, some warnings will appear.\n",
     "import logging\n",
     "\n",
     "logging.basicConfig()\n",
+    "\n",
+    "import multiprocess.context as ctx\n",
+    "ctx._force_start_method('spawn')\n",
     "\n",
     "path = Path.cwd() / \"output\"\n",
     "ic = sdb._raw_images.map(lambda img: img.clip(bounds))\n",
@@ -348,17 +233,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: rasterio in /opt/conda/lib/python3.9/site-packages (1.2.10)\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.9/site-packages (from rasterio) (1.22.2)\n",
-      "Requirement already satisfied: cligj>=0.5 in /opt/conda/lib/python3.9/site-packages (from rasterio) (0.7.2)\n",
+      "Collecting rasterio\n",
+      "  Downloading rasterio-1.2.10-cp39-cp39-manylinux_2_5_x86_64.manylinux1_x86_64.whl (19.2 MB)\n",
+      "\u001b[K     |████████████████████████████████| 19.2 MB 8.2 MB/s eta 0:00:01     |██████████████████████████████▏ | 18.1 MB 8.2 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting cligj>=0.5\n",
+      "  Downloading cligj-0.7.2-py3-none-any.whl (7.1 kB)\n",
       "Requirement already satisfied: attrs in /opt/conda/lib/python3.9/site-packages (from rasterio) (21.2.0)\n",
-      "Requirement already satisfied: affine in /opt/conda/lib/python3.9/site-packages (from rasterio) (2.3.0)\n",
-      "Requirement already satisfied: certifi in /opt/conda/lib/python3.9/site-packages (from rasterio) (2021.10.8)\n",
+      "Collecting snuggs>=1.4.1\n",
+      "  Downloading snuggs-1.4.7-py3-none-any.whl (5.4 kB)\n",
+      "Collecting click-plugins\n",
+      "  Downloading click_plugins-1.1.1-py2.py3-none-any.whl (7.5 kB)\n",
+      "Collecting affine\n",
+      "  Downloading affine-2.3.0-py2.py3-none-any.whl (15 kB)\n",
       "Requirement already satisfied: click>=4.0 in /opt/conda/lib/python3.9/site-packages (from rasterio) (8.0.3)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.9/site-packages (from rasterio) (1.22.2)\n",
+      "Requirement already satisfied: certifi in /opt/conda/lib/python3.9/site-packages (from rasterio) (2021.10.8)\n",
       "Requirement already satisfied: setuptools in /opt/conda/lib/python3.9/site-packages (from rasterio) (58.2.0)\n",
-      "Requirement already satisfied: click-plugins in /opt/conda/lib/python3.9/site-packages (from rasterio) (1.1.1)\n",
-      "Requirement already satisfied: snuggs>=1.4.1 in /opt/conda/lib/python3.9/site-packages (from rasterio) (1.4.7)\n",
-      "Requirement already satisfied: pyparsing>=2.1.6 in /opt/conda/lib/python3.9/site-packages (from snuggs>=1.4.1->rasterio) (2.4.7)\n"
+      "Requirement already satisfied: pyparsing>=2.1.6 in /opt/conda/lib/python3.9/site-packages (from snuggs>=1.4.1->rasterio) (2.4.7)\n",
+      "Installing collected packages: snuggs, cligj, click-plugins, affine, rasterio\n",
+      "Successfully installed affine-2.3.0 click-plugins-1.1.1 cligj-0.7.2 rasterio-1.2.10 snuggs-1.4.7\n"
      ]
     }
    ],
@@ -395,7 +288,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7929c02e80>"
+       "<matplotlib.image.AxesImage at 0x7fa993efd520>"
       ]
      },
      "execution_count": 8,
@@ -545,7 +438,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.9/site-packages/IPython/core/magics/pylab.py:159: UserWarning: pylab import has clobbered these variables: ['array', 'show', 'Polygon']\n",
+      "/opt/conda/lib/python3.9/site-packages/IPython/core/magics/pylab.py:159: UserWarning: pylab import has clobbered these variables: ['show', 'array', 'Polygon']\n",
       "`%matplotlib` prevents importing * from pylab and numpy\n",
       "  warn(\"pylab import has clobbered these variables: %s\"  % clobbered +\n"
      ]
@@ -570,6 +463,14 @@
     "imgplot = pyplot.imshow(img)\n",
     "pyplot.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be1089da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
