--- a/notebooks/JarkusGrids2EE.ipynb
+++ b/notebooks/JarkusGrids2EE.ipynb
@@ -248,41 +248,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'grids' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(dirbathy):\n\u001b[0;32m      7\u001b[0m     os\u001b[38;5;241m.\u001b[39mmakedirs(dirbathy)\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m g \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[43mgrids\u001b[49m):\n\u001b[0;32m     10\u001b[0m     ncols \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(g[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     11\u001b[0m     nrows \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(g[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'grids' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "start_index = 0\n",
-    "jj=0\n",
-    "dirbathy = r'../../output_maasvlakte'\n",
-    "if not os.path.exists(dirbathy):\n",
-    "    os.makedirs(dirbathy)\n",
-    "    \n",
     "for g in tqdm(grids):\n",
-    "    ncols = len(g['x'])\n",
-    "    nrows = len(g['y'])\n",
-    "    cellsize = g['x'][1] - g['x'][0]\n",
-    "    # WARNING! 10m hardcoded! [mahbub]\n",
-    "    xllcorner = np.min(g['x']-10)\n",
-    "    yllcorner = np.min(g['y']-10)\n",
-    "    nodata_value = -32767\n",
-    "    z = g['z']\n",
-    "    print(z.shape)\n",
-    "\n"
+    "    print(g['times'])"
    ]
   },
   {
@@ -296,8 +267,9 @@
     "import os\n",
     "\n",
     "start_index = 0\n",
-    "jj=0\n",
-    "dirbathy = r'../../output_jarkus'\n",
+    "dirbathy = r'../../output_jarkusgrids/'\n",
+    "j = 0\n",
+    "ts = []\n",
     "if not os.path.exists(dirbathy):\n",
     "    os.makedirs(dirbathy)\n",
     "for g in tqdm(grids):\n",
@@ -309,22 +281,18 @@
     "    yllcorner = np.min(g['y']-10)\n",
     "    nodata_value = -32767\n",
     "    z = g['z']\n",
-    "    print(z.shape)\n",
+    "    #print(z.shape)\n",
     "\n",
     "    for i, t in enumerate(g['times']):\n",
+    "        ts.append(t)\n",
     "        if i < start_index:\n",
     "            i = i + 1\n",
     "            continue\n",
-    "\n",
-    "        jj = jj+1\n",
-    "        #print('counter', jj)\n",
-    "\n",
-    "        filename = 'bathymetry_' + str(str(t)[:4]) +\"_\"+str(jj).rjust(4, '0')\n",
-    "#         print(filename)\n",
+    "        j += 1\n",
+    "        filename = 'jarkusgrids_' + str(str(t)[:4]) + '_' + str(j).rjust(3, '0')\n",
     "        filepath = dirbathy  + filename\n",
     "        filepath_asc = filepath + '.asc'\n",
     "        filepath_tif = filepath + '.tif'\n",
-    "        filename_tif = filename + '.tif'\n",
     "\n",
     "        zi = z[i]\n",
     "\n",
@@ -342,30 +310,10 @@
     "\n",
     "        #cmd = 'gdal_translate -ot Float32 -a_srs EPSG:28992 -co COMPRESS=DEFLATE -co PREDICTOR=2 -co ZLEVEL=6 -of GTiff {0} {1}'\\\n",
     "        #    .format(filepath_asc, filepath_tif)\n",
-    "        cmd = 'gdal_translate -ot Float32 -a_srs EPSG:28992 -of COG -of GTiff {0} {1}'\\\n",
+    "        # per tile\n",
+    "        cmd = 'gdal_translate -ot Float32 -a_srs EPSG:28992 -of COG {0} {1}'\\\n",
     "            .format(filepath_asc, filepath_tif)\n",
-    "        run(cmd)\n",
-    "\n",
-    "        filepath_gs = 'gs://eo-bathymetry-rws/jarkusgrids/' + filename_tif  # ?\n",
-    "\n",
-    "        cmd = 'gsutil cp {0} {1}' \\\n",
-    "            .format(filepath_tif, filepath_gs)\n",
-    "        run(cmd, shell=True)\n",
-    "\n",
-    "        filepath_ee = ee_collection_path + '/' + filename\n",
-    "        cmd = 'earthengine upload image --wait --asset_id={0} --nodata_value={1} {2}' \\\n",
-    "            .format(filepath_ee, nodata_value, filepath_gs)\n",
-    "        run(cmd, shell=True)\n",
-    "\n",
-    "        time_start = int(grids[0]['times'][0].timestamp() * 1000)\n",
-    "        cmd = 'earthengine asset set --time_start {0} {1}' \\\n",
-    "            .format(time_start, filepath_ee)\n",
-    "        run(cmd, shell=True)\n",
-    "\n",
-    "        cmd = 'earthengine acl set public {0}' \\\n",
-    "            .format(filepath_ee)\n",
-    "        run(cmd, shell=True)\n",
-    "\n"
+    "        run(cmd)\n"
    ]
   },
   {
@@ -373,7 +321,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# merge per year\n",
+    "uts = list(dict.fromkeys(ts)) # unique times\n",
+    "uyears = [int(str(tt)[:4]) for tt in uts] # unique years\n",
+    "\n",
+    "for ii, tt in enumerate(uyears):\n",
+    "    filename = 'jarkusgrids_' + str(str(tt)[:4])\n",
+    "    filepath = dirbathy + filename\n",
+    "    filepath_tif = [dirbathy+ll for ll in os.listdir(dirbathy) if str(tt) in ll and ll.endswith('.tif')]\n",
+    "    filepath_year_tif = filepath + '.tif'\n",
+    "    \n",
+    "    # per year\n",
+    "    files_to_mosaic = filepath_tif \n",
+    "    g = gdal.Warp(filepath_year_tif, files_to_mosaic, dstSRS='EPSG:28992', \n",
+    "                  outputType=gdal.GDT_Float32, format=\"COG\",\n",
+    "                  options=[\"COMPRESS=LZW\", \"TILED=YES\"])\n",
+    "    g = None \n",
+    "    \n",
+    "    filepath_gs = 'gs://eo-bathymetry-rws/jarkusgrids/' + filename  # temporary file system in storage bucket\n",
+    "    #print(filepath_gs)\n",
+    "    cmd = 'gsutil cp {0} {1}' \\\n",
+    "        .format(filepath_year_tif, filepath_gs)\n",
+    "    run(cmd, shell=True)\n",
+    "\n",
+    "    filepath_ee = ee_collection_path + '/' + filename\n",
+    "    #print(filepath_ee)\n",
+    "    cmd = 'earthengine upload image --wait --asset_id={0} --nodata_value={1} {2}' \\\n",
+    "        .format(filepath_ee, nodata_value, filepath_gs)\n",
+    "    run(cmd, shell=True)\n",
+    "\n",
+    "    time_start = int(uts[ii].timestamp() * 1000)\n",
+    "    cmd = 'earthengine asset set --time_start {0} {1}' \\\n",
+    "        .format(time_start, filepath_ee)\n",
+    "    run(cmd, shell=True)\n",
+    "\n",
+    "    cmd = 'earthengine acl set public {0}' \\\n",
+    "        .format(filepath_ee)\n",
+    "    run(cmd, shell=True)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -438,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
